@@ -1,3 +1,9 @@
+2000-02-26  Havoc Pennington  <hp@pobox.com>
+
+	* examples/Makefile.am: Add new examples
+	* examples/simple-view.c, examples/simple-controller.c:
+	Two simple new examples
+
 2000-02-23  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: Bump version and libtool versions, 
